add seo service

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <meta name="msapplication-navbutton-color" content="#1976d2">
     <meta name="msapplication-starturl" content="./index.html">
     <meta name="msapplication-config" content="browserconfig.xml" />
+    <meta name="msapplication-tap-highlight" content="no">
 
     <meta name="msapplication-TileImage" href="./assets/images/icons/icon-144x144.png">
     <link rel="icon" type="image/png" href="./assets/images/icons/icon-192x192.png">
@@ -50,10 +51,29 @@
     <link rel="apple-touch-icon" sizes="256x256" href="./assets/images/icons/icon-256x256.png">
     <link rel="apple-touch-icon" sizes="384x384" href="./assets/images/icons/icon-384x384.png">
     <link rel="apple-touch-icon" sizes="512x512" href="./assets/images/icons/icon-512x512.png">
-    <!-- https://appiconmaker.co/ -->
 
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
+    <!-- TODO create browser config app -->
+    <!-- <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="mstile-310x310.png" /> -->
+    <!-- browser config -->
+    <!-- <?xml version="1.0" encoding="utf-8"?>
+    <browserconfig>
+      <msapplication>
+        <tile>
+          <square70x70logo src="images/smalltile.png" />
+          <square150x150logo src="images/mediumtile.png" />
+          <wide310x150logo src="images/widetile.png" />
+          <square310x310logo src="images/largetile.png" />
+          <TileColor>#009900</TileColor>
+        </tile>
+      </msapplication>
+    </browserconfig> -->
+
+    <!-- https://appiconmaker.co/ -->
+    <!-- http://cthedot.de/icongen/#output -->
+
     <!-- Add to splash screen for Safari on iOS -->
     <link href="./assets/images/splashscreens/iphone5_splash.png"
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)"
