fix ssr pitfals

--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,7 @@
         style="display:none;visibility:hidden">
       </iframe>
     </noscript>
+    <script src="https://raw.githubusercontent.com/biggora/device-uuid/master/lib/device-uuid.min.js"></script>
   </body>
 
 </html>
