disable auth getter and device uuid to enable ssr

--- a/src/index.html
+++ b/src/index.html
@@ -97,9 +97,7 @@
       media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)"
       rel="apple-touch-startup-image" />
 
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140879795-1"></script> -->
-    <script async defer src='https://www.google-analytics.com/analytics.js'></script>
-    <script async defer
+    <script async defer crossorigin
       src="https://raw.githubusercontent.com/biggora/device-uuid/master/lib/device-uuid.min.js"></script>
 
   </head>
@@ -113,21 +111,13 @@
       ga('create', 'UA-XXXXX-Y', 'auto');
       ga('send', 'pageview');
     </script>
-    <!-- <script>
-    Google tag manager
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'UA-140879795-1');
-  </script> -->
+
     <noscript>
       Please enable JavaScript to continue using this application.
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MCZKD4B" height="0" width="0"
         style="display:none;visibility:hidden">
       </iframe>
     </noscript>
-    <script crossorigin
-      src="https://raw.githubusercontent.com/biggora/device-uuid/master/lib/device-uuid.min.js"></script>
   </body>
 
 </html>
