--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
   <body>
     <app-root></app-root>
     <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <script async src="https://cdn.jsdelivr.net/npm/biri/dist/biri.min.js"></script>
     <noscript>
       Please enable JavaScript to continue using this application.
     </noscript>
