feat: add setup script to prepare the codebase for new project

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Angular Buildozer</title>
+    <meta name="application-name" content="Angular Buildozer">
+    <meta name="apple-mobile-web-app-title" content="Angular Buildozer">
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +21,7 @@
     <!-- End Google Analytics -->
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="manifest" href="./manifest.webmanifest">
+    <link rel="manifest" href="./manifest.json">
 
     <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
     <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon"> -->
@@ -27,9 +29,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#1976d2">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Angular Buildozer">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Angular Buildozer">
     <meta name="msapplication-TileColor" content="#1976d2">
     <meta name="msapplication-navbutton-color" content="#1976d2">
     <meta name="msapplication-starturl" content="./index.html">
