chore: clean up unnesscary files

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Angular Buildozer</title>
-    <meta name="application-name" content="Angular Buildozer">
-    <meta name="apple-mobile-web-app-title" content="Angular Buildozer">
+    <title>Messenger Clone</title>
+    <meta name="application-name" content="Messenger Clone">
+    <meta name="apple-mobile-web-app-title" content="Messenger Clone">
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
